3_CFS_DataMigration/0_BICEP/ADF/network/securitygroup.template.bicep
@description('The name of the network security group to create.')
param securityGroupName string

@description('Location for all resources.')
param securityGroupLocation string = resourceGroup().location

param tags object

resource securityGroupName_resource 'Microsoft.Network/networkSecurityGroups@2020-05-01' = {
  name: securityGroupName
  location: securityGroupLocation
  tags: tags
  //properties: {
  //  securityRules: [
      // {
      //   name: 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound'
      //   properties: {
      //     description: 'Required for worker nodes communication within a cluster.'
      //     protocol: '*'
      //     sourcePortRange: '*'
      //     destinationPortRange: '*'
      //     sourceAddressPrefix: 'VirtualNetwork'
      //     destinationAddressPrefix: 'VirtualNetwork'
      //     access: 'Allow'
      //     priority: 100
      //     direction: 'Inbound'
      //   }
      // }
      // {
      //   name: 'RDP'
      //   properties: {
      //     description: 'Open 3389 Temporarily.'
      //     protocol: '*'
      //     sourcePortRange: '*'
      //     destinationPortRange: '3389'
      //     sourceAddressPrefix: '*'
      //     destinationAddressPrefix: '*'
      //     access: 'Allow'
      //     priority: 100
      //     direction: 'Inbound'
      //   }
      // }
      // {
      //   name: 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp'
      //   properties: {
      //     description: 'Required for workers communication with Databricks Webapp.'
      //     protocol: 'Tcp'
      //     sourcePortRange: '*'
      //     destinationPortRange: '443'
      //     sourceAddressPrefix: 'VirtualNetwork'
      //     destinationAddressPrefix: 'AzureDatabricks'
      //     access: 'Allow'
      //     priority: 100
      //     direction: 'Outbound'
      //   }
      // }
      // {
      //   name: 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql'
      //   properties: {
      //     description: 'Required for workers communication with Azure SQL services.'
      //     protocol: 'Tcp'
      //     sourcePortRange: '*'
      //     destinationPortRange: '3306'
      //     sourceAddressPrefix: 'VirtualNetwork'
      //     destinationAddressPrefix: 'Sql'
      //     access: 'Allow'
      //     priority: 101
      //     direction: 'Outbound'
      //   }
      // }
      // {
      //   name: 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage'
      //   properties: {
      //     description: 'Required for workers communication with Azure Storage services.'
      //     protocol: 'Tcp'
      //     sourcePortRange: '*'
      //     destinationPortRange: '443'
      //     sourceAddressPrefix: 'VirtualNetwork'
      //     destinationAddressPrefix: 'Storage'
      //     access: 'Allow'
      //     priority: 102
      //     direction: 'Outbound'
      //   }
      // }
      // {
      //   name: 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound'
      //   properties: {
      //     description: 'Required for worker nodes communication within a cluster.'
      //     protocol: '*'
      //     sourcePortRange: '*'
      //     destinationPortRange: '*'
      //     sourceAddressPrefix: 'VirtualNetwork'
      //     destinationAddressPrefix: 'VirtualNetwork'
      //     access: 'Allow'
      //     priority: 103
      //     direction: 'Outbound'
      //   }
      // }
      // {
      //   name: 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub'
      //   properties: {
      //     description: 'Required for worker communication with Azure Eventhub services.'
      //     protocol: 'Tcp'
      //     sourcePortRange: '*'
      //     destinationPortRange: '9093'
      //     sourceAddressPrefix: 'VirtualNetwork'
      //     destinationAddressPrefix: 'EventHub'
      //     access: 'Allow'
      //     priority: 104
      //     direction: 'Outbound'
      //   }
      // }
  //  ]
 // }
}

output nsgName string = securityGroupName_resource.name
